feat 文件分享接入统一资源访问接口